--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 NOTIFICATION_SECRET=
 TELEGRAM_BOT_API_TOKEN=
 SERVER_PORT=
+DB_FOLDER=
+# will allow only users with chat_id in the list to use the bot
+IS_PRIVATE=
 
 # Used by deployment scripts
 REMOTE_SERVER_IP=
