--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -1,13 +1,13 @@
-version: '3'
-
 services:
   myapp:
     image: ${DOCKER_USERNAME}/${DOCKER_REPO}:${DOCKER_TAG}
     ports:
       - ${SERVER_PORT}:${SERVER_PORT}
     volumes:
-      - ./volumes:/volumes
+      - ./notifications-bot-db:/notifications-bot-db
     environment:
       - SERVER_PORT=${SERVER_PORT}
       - TELEGRAM_BOT_API_TOKEN=${TELEGRAM_BOT_API_TOKEN}
       - NOTIFICATION_SECRET=${NOTIFICATION_SECRET}
+      - DB_FOLDER=/notifications-bot-db
+      - IS_PRIVATE=${IS_PRIVATE}
