--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 services:
   app:
     image: notifications-bot
@@ -9,8 +8,10 @@ services:
       - ${SERVER_PORT}:${SERVER_PORT}
     volumes:
       - ./:/app
-      - ./volumes:/volumes
+      - ./notifications-bot-db:/notifications-bot-db
     environment:
       - SERVER_PORT=${SERVER_PORT}
       - TELEGRAM_BOT_API_TOKEN=${TELEGRAM_BOT_API_TOKEN}
       - NOTIFICATION_SECRET=${NOTIFICATION_SECRET}
+      - DB_FOLDER=/notifications-bot-db
+      - IS_PRIVATE=${IS_PRIVATE}
